# imhangul

./: .cvsignore  .gitignore  ChangeLog  ChangeLog.0  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  candidatetable.h  chartable.h  configure  configure.in  entry.c  gen.py  gtkimcontexthangul.c  gtkimcontexthangul.h  gtkrc  hangulcandidate.h  hanjatable.h  hanjatable.py  imhangul.c  imhangul.conf  imhangul.h  imhangul.spec.in  imhangul2.c  imhangul3.h  imhangul32.c  imhangul39.c  imhangul3f.c  imhangul3s.c  imhangul3y.c  test.sh
imhangul/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  autogen.sh  candidatetable.h  chartable.h  configure.in  entry.c  gettext.h  gtkimcontexthangul.c  gtkimcontexthangul.h  gtkrc  hanjatable.h  hanjatable.py  imhangul.c  imhangul.h  imhangul.spec.in  imhangul2.c  imhangul3.c  imhangul3.h  imhangul32.c  imhangul39.c  imhangul3f.c  imhangul3y.c  test.sh
imhangul/po/: ChangeLog  ko.po
imhangul_status_applet/: .cvsignore  ChangeLog  Makefile.am  README  acconfig.h  autogen.sh  configure.in
imhangul_status_applet/po/: .cvsignore  POTFILES.in  ko.po
imhangul_status_applet/src/: .cvsignore  GNOME_IMHangulStatusApplet.server.in.in  GNOME_IMHangulStatusApplet.xml  Makefile.am  english.xpm  hangul.xpm  imhangul_status.c  imhangul_status.schemas.in  none.xpm
imhangul_status_applet/src/themes/: .cvsignore  Makefile.am
imhangul_status_applet/src/themes/KingSejong/: Makefile.am  README
imhangul_status_applet/src/themes/MSWindows/: Makefile.am
imhangul_status_applet/src/themes/MSWindowsXP/: Makefile.am
imhangul_status_applet/src/themes/Mac/: Makefile.am
imhangul_status_applet/src/themes/Onion/: Makefile.am
imhangul_status_applet/src/themes/SimplyRed/: Makefile.am
imhangul_status_applet/src/themes/keyboard/: Makefile.am
po/: POTFILES.in  ko.po
