AC_INIT(imhangul.c)

AM_INIT_AUTOMAKE(imhangul, 0.9.9)
AM_MAINTAINER_MODE

dnl Checks for programs
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL

AC_DISABLE_STATIC
AC_PROG_LIBTOOL

dnl Checks for libraries.
dnl AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.2.0,,
		  AC_MSG_ERROR([im-hangul needs GTK+ 2.2.0 or higher]))

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

dnl use "STRIP_" macros
AC_MSG_CHECKING(whether make is GNU Make)
STRIP_BEGIN=
STRIP_END=
if $ac_make --version 2>/dev/null | grep '^GNU Make ' >/dev/null ; then
	STRIP_BEGIN='$(strip $(STRIP_DUMMY)'
	STRIP_END=')'
	AC_MSG_RESULT(yes)
else
	AC_MSG_RESULT(no)
fi
STRIP_DUMMY=
AC_SUBST(STRIP_DUMMY)
AC_SUBST(STRIP_BEGIN)
AC_SUBST(STRIP_END)

dnl check for gtk binary version
GTK_BINARY_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
GTK_PREFIX=`$PKG_CONFIG --variable=prefix gtk+-2.0`
AC_SUBST(GTK_BINARY_VERSION)
AC_SUBST(GTK_PREFIX)

AC_OUTPUT(Makefile imhangul.spec)
