AC_INIT(src/imhangul_status.c)
AM_INIT_AUTOMAKE(imhangul_status_applet, 0.3)
AM_CONFIG_HEADER(config.h)

AC_PROG_INTLTOOL
AC_ISC_POSIX
AC_PROG_CC
AM_PROG_LIBTOOL

GNOME_PANEL_REQUIRED=2.0.0
PKG_CHECK_MODULES(IMHANGUL_STATUS, libpanelapplet-2.0 >= $GNOME_PANEL_REQUIRED)
AC_SUBST(IMHANGUL_STATUS_CFLAGS)
AC_SUBST(IMHANGUL_STATUS_LIBS)
IMHANGUL_STATUS_THEMES_DIR="${datadir}/imhangul/themes"
AC_SUBST(IMHANGUL_STATUS_THEMES_DIR)

## gconf settings
AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
if test x"$GCONFTOOL" = xno ; then
	AC_MSG_ERROR([gconftool-2 executable not found in your path])
fi
AM_GCONF_SOURCE_2

## gettext stuff
ALL_LINGUAS="ko"
AM_GLIB_GNU_GETTEXT
GETTEXT_PACKAGE=imhangul_status_applet
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE",
		   [gettext package name])

## some const variables
AC_DEFINE_UNQUOTED(GNOME_ICONDIR, "${prefix}/share/pixmaps",
		   [gnome icon directory])

AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
src/themes/Makefile
src/themes/SimplyRed/Makefile
src/themes/MSWindows/Makefile
src/themes/Mac/Makefile
src/themes/Onion/Makefile
src/themes/KingSejong/Makefile
src/themes/keyboard/Makefile
])
